[gd_scene format=3 uid="uid://dalwxj7g1q6wr"]

[ext_resource type="FontFile" uid="uid://c3jmg21vyiyo8" path="res://assets/fonts/UnifrakturMaguntia/UnifrakturMaguntia-Regular.ttf" id="1_hyk8p"]
[ext_resource type="Script" uid="uid://cqhexq3bbpwmm" path="res://scenes/main/main.gd" id="1_iuonh"]

[sub_resource type="Gradient" id="Gradient_hyk8p"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iuonh"]
gradient = SubResource("Gradient_hyk8p")

[sub_resource type="Gradient" id="Gradient_k2fmo"]
offsets = PackedFloat32Array(0, 0.5798077, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.42, 0, 0, 1, 0.16, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l3cfh"]
gradient = SubResource("Gradient_k2fmo")
fill = 2
fill_from = Vector2(-0.56, -0.6)

[sub_resource type="Curve" id="Curve_hyk8p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.059642155, 0.5801202), 0.0, 0.0, 0, 0, Vector2(0.41451296, 0.046319485), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_iuonh"]
curve = SubResource("Curve_hyk8p")

[sub_resource type="Gradient" id="Gradient_l3cfh"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6q06x"]
gradient = SubResource("Gradient_l3cfh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6q06x"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(2000, 68.9, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -297.3
angle_max = 333.30002
gravity = Vector3(0, 98, 0)
linear_accel_min = -18.520002
linear_accel_max = 71.299995
scale_min = 0.0
scale_max = 9.7
color = Color(1, 0, 0, 1)
color_initial_ramp = SubResource("GradientTexture1D_6q06x")
alpha_curve = SubResource("CurveTexture_iuonh")

[node name="Main" type="Node2D" unique_id=1221518349]
script = ExtResource("1_iuonh")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=213418267]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" unique_id=807526056]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_iuonh")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer" unique_id=1281101275]
modulate = Color(1, 1, 1, 0.16862746)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_l3cfh")
stretch_mode = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="CanvasLayer" unique_id=1217343530]
position = Vector2(1922, -78)
amount = 5000
lifetime = 15.959999999999999
preprocess = 15.0
visibility_rect = Rect2(-2029.28, -100, 4000, 3000)
process_material = SubResource("ParticleProcessMaterial_6q06x")

[node name="Label" type="Label" parent="CanvasLayer" unique_id=1100717500]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -749.5
offset_top = 292.0
offset_right = 749.5
offset_bottom = 426.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.20784314)
theme_override_colors/font_outline_color = Color(0.16, 0, 0, 1)
theme_override_constants/shadow_offset_x = 16
theme_override_constants/shadow_offset_y = 16
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_hyk8p")
theme_override_font_sizes/font_size = 256
text = "Bloodscribers: Stream or Die"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer" unique_id=261944042]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = 159.0
offset_right = 178.5
offset_bottom = 455.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer" unique_id=274096235]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Start Game"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer" unique_id=555114337]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer" unique_id=175223930]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Exit"
